<resources>
    <string name="app_name">SmartInterphone</string>
    <string name="create_new_account">Create new Account</string>
    <string name="name_hint">First Name</string>
    <string name="prename_hint">Last Name</string>
    <string name="username_hint">Username</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="cearte_account">Create an account</string>
    <string name="text1">By taping sign up you agree to the</string>
    <string name="terms">Terms and conditions</string>
    <string name="welcome">Welcome</string>
    <string name="forgot_password">Forgot password ? </string>
    <string name="signin">Sign in</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="img">logo</string>
    <string name="facebook_app_id">412705209501983</string>
    <string name="fb_login_protocol_scheme">fb412705209501983</string>
    <string name="invalid_request">Invalid request</string>
    <string name="user_already_registered">User Already Registered !</string>
    <string name="internal_server_error">Internal Server Error !</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_password">Your password should have more than 8 characters</string>
    <string name="invalid_empty">This field is empty</string>
    <string name="invalid_credentials">Invalid Credentials !</string>
    <string name="user_not_found">User not found</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Devices</string>
    <string name="title_dashboard">Profile</string>
    <string name="title_notifications">Calendar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="device_name">Device name</string>
    <string name="device_added">Device created</string>
    <string name="device_not_added">Add device Failed</string>
    <string name="message_created">Message created !</string>
    <string name="message_not_added">Message not created !</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="message">Write your message here</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="logout">Logout</string>
    <string name="message_updated">Message was succesfully updated</string>
    <string name="update">Update Message</string>


</resources>
