<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUpActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp">
        <Button
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:id="@+id/exit"
            android:background="@drawable/close"
            android:layout_marginStart="25dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/exit"
            android:layout_centerInParent="true"
            android:layout_marginTop="0dp"
            android:textSize="30sp"
            android:text="@string/create_new_account" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center">
        <EditText
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/field"
            android:hint="@string/name_hint"
            android:textAlignment="textStart"
            />
        <EditText
            android:id="@+id/prename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/field"
            android:layout_toEndOf="@+id/name"
            android:hint="@string/prename_hint"
            android:textAlignment="textStart"/>
        <EditText
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/field1"
            android:layout_below="@+id/name"
            android:hint="@string/username_hint"
            android:textAlignment="textStart"
            />
        <EditText
            android:inputType="textEmailAddress"
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/field1"
            android:layout_below="@+id/username"
            android:hint="@string/email_hint"
            android:textAlignment="textStart"
            />
        <EditText
            android:inputType="textPassword"
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/field1"
            android:layout_below="@+id/email"
            android:hint="@string/password_hint"
            android:textAlignment="textStart"
            />


        <TextView
            android:layout_marginTop="30dp"
            android:layout_below="@id/password"
            android:gravity="center"
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/text1"/>

        <TextView
            android:id="@+id/terms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text1"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="30dp"
            android:layout_centerInParent="true"
            android:textColor="@android:color/holo_red_dark"
            android:textColorLink="@android:color/holo_red_dark"
            android:linksClickable="true"
            android:textStyle="bold"
            android:text="@string/terms" />


        <Button
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:layout_below="@+id/terms"
            android:text="@string/create_new_account"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:background="@drawable/button"/>
    </RelativeLayout>





</LinearLayout>